--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1053,14 +1053,17 @@ table { margin-bottom:15px; width:100%; border-collapse:collapse; border-spacing
 .page-template .addressFooter li p { padding-left:30px; }
 
 .contact-template .section-header { margin-bottom:0; }
-.contact-template .map-section { margin-bottom:0; overflow:hidden; height:350px; }
+.contact-template .map-section { margin-bottom:0;margin-top:0; overflow:hidden; height:350px; }
 .contact-template .map-section .container { position:relative; height:100%; }
-.contact-template .map-section__overlay { left:auto; width:300px; padding:20px; display:inline-block; text-align:center; z-index:3; position:absolute; left:0; top:0; transform:translateY(-135%); -webkit-transform:translateY(-135%); margin-top:0; background:rgba(255,255,255,0.8); }
-.contact-template .map-section__overlay-wrapper { position:static; text-align:left; height:100%; }
+.contact-template .map-section__overlay { left:auto; width:300px; display:inline-block; text-align:center; z-index:3; position:absolute; left:0; top:0; transform:translateY(-135%); -webkit-transform:translateY(-135%); margin-top:0; background:rgba(255,255,255,0.8); }
+.contact-template .map-section__overlay-wrapper { position:relative; text-align:left; height:100%;margin:25px 0 25px 0; }
+.map-section__overlay .h4{margin:50px 0 0 0;}
+.map-section__overlay .btn{margin:0 0 50px 0;}
 .rte-setting { margin-bottom:50px; }
 .rte-setting p{font-size:21px;line-height:21px;}
 .contact-template .btn--secondary { background-color:#ededed; color:#000; border:1px solid #000; }
 .contact-form textarea { height:120px; }
+.contact-form span{ font-size:14px; font-weight:600; color:#F00;}
 
 #accordionExample .title { margin:35px 0 20px; }
 #accordionExample .panel-title { cursor:pointer; font-family:Poppins,Helvetica,Tahoma,Arial,sans-serif; font-size:14px; text-transform:none; margin:0; background:none; padding:15px; border-top:2px solid #eee; display:block; color:#555; padding-left:30px; position:relative; }
